Add line in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
   <h1>Bienvenue sur Collabsite</h1>
   <p>Page d'acceuil du projet</p>
+
+  <p>Etudiant 1 a ajouter cette ligne</p>
 </body>
 </html>
